kubernetes/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: asia-southeast1-docker.pkg.dev/peerprep-437117/peerprep/frontend-peerprep:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
